# netframe

./: .gitignore  CMakeLists.txt  build.sh
conf/: net_frame.xml  urconfig.properties
example/: CMakeLists.txt
example/agent/agent/: agent.c  agent.h
example/agent/business_server/: business_server.c  (+1 more)
example/python/: client.py
example/server/: CMakeLists.txt
example/server/server/: server.c  server.h
example/server/src/: CMakeLists.txt  main.cpp
interface/include/: cnv_base_define.h  cnv_blocking_queue.h  cnv_comm.h  cnv_queue_type.h  cnv_unblock_queue.h  common_type.h
src/base/: alg_md5.c  cjson.c  cnv_adler32.c  cnv_adler32.h  cnv_comm.c  cnv_crc32.c  cnv_crc32.h
src/conf/: net_frame.xml
src/container/: cnv_blocking_queue.c  cnv_fifo.c  cnv_fifo.h  cnv_hashmap.c  cnv_lock_free_queue.c  cnv_queue.c  cnv_unblock_queue.c
src/frame/: CMakeLists.txt  cnv_xml_parse.c  netframe_accept.c  netframe_accept.h  netframe_admin.c  netframe_admin.h  netframe_auxiliary.c  netframe_auxiliary.h  netframe_common.c  netframe_common.h  netframe_handle.c  netframe_handle.h  netframe_io.c  netframe_io.h  netframe_main.c  netframe_structdefine.h
src/include/: alg_md5.h  cjson.h  cnv_core_typedef.h  cnv_hashmap.h  cnv_lock_free_queue.h  cnv_queue.h  cnv_xml_parse.h  common_type.h  netframe_main.h  netframe_net.h
src/net/: cnv_net_define.h  netframe_net.c
src/netframe/: alg_md5.h  cnv_hashmap.h  cnv_queue_type.h  cnv_xml_parse.h  common_type.h  netframe_net.h
src/osadapter/: cnv_thread.c  cnv_thread.h  cnv_thread_basic.h  cnv_thread_sys.c  cnv_thread_sys.h
(+2 files in other folders)
